# weave

./: .gitignore  README.md  main.py  pyproject.toml  weave.db-shm  weave.db-wal
benchmark/: benchmark.py  config.py  utils.py
weave/: api.py  config.py  crawler.py  fetcher.py  frontier.py  mcp_server.py  parser.py  storage.py
