[project]
name = "weave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.0",
    "mcp>=1.27.0",
    "pydantic>=2.13.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
weave = "weave.__main__:main"
